--- a/notebooks/2_neo4j.ipynb
+++ b/notebooks/2_neo4j.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,12 +46,21 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 2
     }
    ],
    "source": [
     "df = pd.read_excel('../data/tweets_violencia_infantil.xlsx')\n",
     "df.shape, df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/tweets_violencia_infantil.csv', encoding='utf-8', index=False)"
    ]
   },
   {
